assets/css/style.css
@import "./reset.css";

header {
  width: auto;
}
a {
  text-decoration: none;
  color: black;
}
header,
nav {
  width: 100%;
  position: fixed;
  top: 0;
  z-index: 2;
  margin-bottom: 77px;
}
header > div {
  margin-top: 77px;
}

.upper-nav {
  height: 30px;
  background-color: black;
  color: hsla(0, 0%, 100%, 0.6);
}
.lower-nav {
  background-color: white;
  color: #aaa;
  width: 100%;
  height: 48px;
}
.logo,
.upper-nav-left,
.lower-nav-list {
  float: left;
}
.logo {
  display: none;
}

.upper-nav-left ul li,
.upper-nav-right ul li,
.lower-nav-list ul li {
  display: inline-block;
  padding: 7px;
}
.search-div ul li,
.lower-nav-list ul li {
  padding: 15px 5px;
}

.search-div ul li:first-child {
  border: 1px solid #aaa;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: -15px;
}

.upper-nav-right {
  float: right;
}
.search-div {
  float: right;
}

.spacer {
  background-color: #ffdd33;
  padding: 10px;
}
.header-sec {
  display: grid;
  background-color: green;
  grid-template-columns: 2fr 1fr;
  height: 400px;
  width: 100%;
  position: relative;
  /* margin-top: 113px; */
}

.big-news,
.small-news-1,
.small-news-2,
.three-div-background-1,
.three-div-background-2,
.three-div-background-3 {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.big-news {
  grid-row: 1/3;
  background-image: linear-gradient(
      to right bottom,
      rgba(235, 76, 59, 0.9),
      rgba(20, 19, 33, 0.5)
    ),
    url("../img/api-dev-code.png");
  position: relative;
}

.brand {
  width: 510px;
  position: absolute;
  left: 20px;
  top: 20px;
}

.big-news span {
  float: right;
  padding: 20px;
  color: white;
}

.pic-detail {
  width: 60%;
  position: absolute;
  left: 20px;
  bottom: 10px;
}

.pic-detail .para {
  font-size: 44px;
}
.para {
  font-weight: bold;
  color: white;
  width: 100%;
}

.lower-para {
  padding: 15px 0 15px 0;
  font-size: 18px;
  color: white;
}
.news-img {
  position: relative;
}
.news-img > a > img {
  height: 16vw;
}
.triangle {
  width: 0;
  height: 0;
  border: 50px solid transparent;
  border-bottom: 50px solid yellow;
  position: absolute;
  top: -50px;
  right: -50px;
  transform: rotate(45deg);
}

.triangle span {
  display: inline-block;
  width: 70px;
  position: relative;
  top: 30px;
  right: 27px;
  color: #000;
  font-weight: bold;
  font-size: 14px;
}
.small-news-1 {
  background-image: url("../img/sprint_image.jpg");
  background-position: bottom;
  position: relative;
}

.small-news-2 {
  background-image: url("../img/tree-cloud.jpg");
  background-position: bottom;
  position: relative;
}

.for-2 {
  width: 80%;
}
.for-2 .para {
  font-size: 24px;
}

.container {
  width: 85%;
  margin: 0 auto;
}

.Latest-news-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  width: 100%;
  margin-bottom: 50px;
  grid-gap: 10px;
}

.aside-img {
  position: relative;
  margin-bottom: 20px;
}

.aside-img img {
  position: absolute;
  left: 10px;
  top: 15px;
  width: 50px;
  height: 50px;
}

.img-head h4,
.img-head p {
  padding-left: 75px;
  padding-top: 10px;
  background-color: #ff4422;
  font-size: 24px;
}

.img-head p {
  padding-bottom: 15px;
  background-color: rgba(255, 68, 34, 0.08);
  font-weight: bold;
}
.onebuy ul li:last-of-type {
  margin-bottom: 8px;
  padding: 7px 0;
  border-bottom: 1px solid rgba(255, 68, 34, 0.25);
}

.onebuy p {
  font-size: 16px;
  line-height: 1.5;
}

.onebuy p span {
  color: #aaa;
  font-size: 13px;
}
.latest-title {
  width: auto;
  margin: 10px auto;
}

.latest-title p,
.latest-title h1 {
  font-size: 28px;
  font-weight: bold;
  color: #ff4422;
}

.for-three-div {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 100%;
  margin-bottom: 120px;
  grid-gap: 10px;
}
.news img {
  width: 100%;
}
.news a {
  font-size: 18px;
  font-weight: bold;
}
.news a:hover {
  color: #ff4422;
}
.auther-date {
  font-size: 14px;
  color: #aaa;
  margin-top: 10px;
}
.auther-date span {
  margin-left: 15px;
}
.latest-fund {
  margin-top: 10px;
  display: flex;
  justify-content: space-between;
  width: 100%;
  align-items: baseline;
}
.latest-fund ul li {
  float: right;
  font-size: 18px;
  color: #ff4422;
  margin-left: 10px;
  padding-right: 10px;
  border-right: 1px solid #ff4422;
}
.latest-fund ul li:first-of-type {
  border: none;
}
.position-three-div {
  position: relative;
  height: 20vw;
}
.position-three-div div {
  position: absolute;
  bottom: 5px;
  color: #fff;
  padding: 0 10px;
}
.position-three-div a {
  color: #fff;
  font-size: 24px;
  font-weight: bold;
}
.position-three-div a:hover {
  box-shadow: inset 0 -1px 0 rgba(175, 172, 172, 0.561);
}
.three-div-background-1 {
  background-image: linear-gradient(
      to bottom,
      rgba(230, 228, 228, 0.174),
      rgba(0, 0, 0, 0.815)
    ),
    url(../img/background-1.jpg);
}
.three-div-background-2 {
  background-image: linear-gradient(
      to bottom,
      rgba(230, 228, 228, 0.174),
      rgba(0, 0, 0, 0.815)
    ),
    url(../img/background-2.jpeg);
}
.three-div-background-3 {
  background-image: linear-gradient(
      to bottom,
      rgba(230, 228, 228, 0.174),
      rgba(0, 0, 0, 0.815)
    ),
    url(../img/background-3.png);
}
.three-grid-sub {
  display: flex;
  justify-content: space-between;
}
.three-grid-sub-text {
  justify-self: left;
  flex: 3;
  color: #ff4422;
  background-color: rgba(255, 68, 34, 0.08);
  padding: 10px 2px;
  margin-right: 5px;
}
.three-grid-sub-text p {
  font-size: 16px;
  padding: 5px;
}
.three-grid-sub-text a {
  color: #ff4422;
  font-size: 17px;
  font-weight: bold;
}
.three-grid-sub-img {
  justify-self: right;
  flex: 1;
}
.three-grid-sub-img img {
  width: 100%;
  height: 100%;
}
.three-grid-sub-list li::before {
  content: "\2022";
  color: #ff4422;
  font-weight: bold;
  display: inline-block;
}
.three-grid-sub-list li {
  margin-top: 10px;
  border-bottom: 1px solid rgb(173, 173, 173);
  padding-bottom: 10px;
}
.three-grid-sub-list li a {
  color: rgb(107, 107, 107);
  font-size: 14px;
  line-height: 17px;
}
.three-grid-sub-list li a:hover {
  color: black;
}
footer {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.footer-social {
  background-color: #131313;
}
.footer-copyright {
  background-color: #000;
}
.footer-copyright p {
  color: white;
  text-align: center;
  padding: 40px 0;
}
.footer-list {
  text-align: center;
}
.footer-list li {
  display: inline-block;
  padding: 30px 5px 10px 5px;
}
.footer-list li a {
  color: white;
}
.menu,
.menu::before,
.menu::after {
  display: none;
}
@media screen and (max-width: 1020px) {
  .logo {
    display: inline-block;
  }
  .logo-brand {
    display: block;
    padding: 0 10px;
    width: 100px;
    height: 77px;
    background-image: linear-gradient(
      to right bottom,
      rgba(240, 58, 76),
      rgba(232, 54, 19)
    );
  }
  .hidden-tablet {
    display: none;
  }
  .Latest-news-grid {
    grid-template-columns: repeat(3, 1fr);
  }
  .for-three-div {
    grid-template-columns: 1fr 1fr;
  }
  .latest-fund {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: baseline;
    justify-content: start;
  }
  .brand {
    display: none;
  }
  .big-news span {
    display: none;
  }
  .pic-detail .para {
    font-size: 20px;
  }
  .lower-nav-list {
    float: none;
    display: inline-block;
  }
}
@media screen and (max-width: 890px) {
  .upper-nav-right {
    display: none;
  }
  .brand {
    display: none;
  }
}
@media screen and (max-width: 760px) {
  header > div {
    margin-top: 48px;
  }
  .hidden-phone {
    display: none;
  }
  .logo-brand {
    height: 48px;
  }
  .header-sec,
  .Latest-news-grid,
  .for-three-div {
    grid-template-columns: 1fr;
  }
  .Latest-news-grid {
    margin-bottom: 70px;
  }

  .big-news {
    grid-row: 1;
  }
  .search-div ul li {
    border: 1px solid #aaa;
    padding-right: 15px;
    padding-left: 15px;
  }
  .search-div ul li:first-child {
    margin-right: -5px;
  }
  .menu,
  .menu::before,
  .menu::after {
    display: inline-block;
  }
  svg {
    display: none;
  }
  .grid-news {
    display: grid;
    grid-template-columns: 1fr 6fr;
  }
  .news-title {
    margin-left: 20px;
  }

  .pic-detail {
    width: 60%;
    position: absolute;
    left: 20px;
    bottom: 5px;
  }
  .lower-para {
    font-size: 12px;
  }
  .pic-detail .para {
    font-size: 18px;
  }
  .search-div {
    float: right;
  }
  .search-div ul li {
    display: inline-block;
  }
  .news img {
    height: 100%;
  }
  .news h2 {
    font-size: 16px;
  }
  .news p {
    font-size: 12px;
    margin-top: 2px;
  }
  .latest-fund {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: baseline;
    justify-content: start;
  }
  .latest-fund ul li {
    float: none;
    margin-left: 0;
    padding-right: 0;
    border-right: none;
  }

  .onebuy img {
    display: grid;
    grid-template-columns: 1fr;
    width: 50px;
    height: 50px;
    margin-bottom: 20px;
  }
  .position-three-div {
    height: 70vw;
  }
  .triangle {
    display: none;
  }
}

